config/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ocp-vcf-dashboard
  namespace: vsphere-infra-helpers
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: ocp-vcf-dashboard-tls
spec:
  selector:
    app: ocp-vcf-dashboard
  ports:
    - name: https
      port: 443
      targetPort: https-proxy
  type: ClusterIP
