config/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ocp-vcf-dashboard
  namespace: vsphere-infra-helpers
spec:
  to:
    kind: Service
    name: ocp-vcf-dashboard
  port:
    targetPort: https
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
